# imba-chess

./: .gitignore  BEAM_SEARCH_PLAN.md  EVAL_SPEC.md  FEN_TO_BOARD_STATE.md  PLAN.md  README.md  STOCKFISH_EVAL_PLAN.md  TRAINING_EVENT_SCHEMA.md  VALUE_HEAD_OPTIONS.md  VALUE_SEARCH_CONVERSATION.md  eval_best_checkpoint.sh  logs.txt  pyproject.toml  sweep.sh  sweep_value_net_alpha.sh  train_autorestart.sh
config/: imba_chess.toml  imba_chess_exit_alpha01_beta050.toml  imba_chess_exit_alpha01_beta075.toml  imba_chess_exit_alpha_control.toml  imba_chess_exit_alpha_low.toml  imba_chess_exit_full.toml  imba_chess_exit_nightly_beta050.toml  imba_chess_exit_nightly_beta075.toml  imba_chess_exit_probe_beta025.toml  imba_chess_exit_probe_beta050.toml  imba_chess_exit_probe_beta075.toml
scripts/: build_static_move_vocab.py  calibrate_stockfish_nodes.py  estimate_lichess_cache.py  eval_best_checkpoint.sh  eval_policy_kl_loss.py  eval_value_by_progress.py  eval_value_loss.py  eval_vs_stockfish.py  generate_rollouts_remote.sh  generate_search_rollouts.py  nightly_alpha01_train_and_eval.sh  preview_dataset.py  rollout_nightly_start.sh  rollout_nightly_stop.sh  sweep_adaptive_lam.sh  sweep_adaptive_lam_confirm.sh  test_event_dataloader.py  test_hstu_forward.py  train.py  train_value_net.py
tests/: conftest.py  test_actor_server.py  test_actor_worker.py  test_batch_scheduler.py  test_board_state.py  test_calibrate_stockfish_nodes.py  test_collate.py  test_config.py  test_cozy_bridge.py  test_cozy_differential.py  test_dataloader.py  test_engine_pool.py  test_eval_metrics.py  test_eval_policy_kl_loss.py  test_eval_vs_stockfish.py  test_eval_vs_stockfish_hard_exit.py  test_event_builder.py  test_expert_iteration_end_to_end.py  test_game_animation.py  test_grouped_decode.py  (+15 more)
(+64 files in other folders)
