[project]
name = "imba-chess"
version = "0.1.0"
description = "Dataset and training utilities for high-elo chess modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20.0",
  "python-chess>=1.999",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
